--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: rive_animation_manager
 description: A comprehensive Flutter package for managing Rive animations with data binding, image replacement, and global state management capabilities.
-version: 1.0.0
-homepage: https://github.com/unspokenlanguage/Rive-Animation-Manager.git
-repository: https://github.com/unspokenlanguage/Rive-Animation-Manager.git
-issue_tracker: https://github.com/unspokenlanguage/Rive-Animation-Manager.git
+version: 1.0.2
+homepage: https://github.com/unspokenlanguage/Rive-Animation-Manager
+repository: https://github.com/unspokenlanguage/Rive-Animation-Manager
+issue_tracker: https://github.com/unspokenlanguage/Rive-Animation-Manager/issues
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -21,7 +21,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
 
-flutter:
+flutter: {}
 
 topics:
   - animation
