Update .gitignore and add .pubignore for pub.dev

--- a/.pubignore
+++ b/.pubignore
@@ -1,5 +1,19 @@
+build/
+.dart_tool/
+.packages
+*.iml
+.pub-cache/
+.pub/
 .DS_Store
-lib/.DS_Store
-lib/src/.DS_Store
-lib/src/controller/.DS_Store
+.DS_Store?
+._*
+.idea/
+.vscode/
 pubspec.lock
+coverage/
+.github/
+test/
+example/build/
+example/.dart_tool/
+example/.packages
+example/pubspec.lock
