--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: rive_animation_manager
 description: A comprehensive Flutter package for managing Rive animations with data binding, image replacement, and global state management capabilities.
-version: 1.0.15
+version: 1.0.17
 homepage: https://github.com/unspokenlanguage/Rive-Animation-Manager
 repository: https://github.com/unspokenlanguage/Rive-Animation-Manager
 issue_tracker: https://github.com/unspokenlanguage/Rive-Animation-Manager/issues
@@ -12,8 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rive_native: ^0.0.16
-  rive: ^0.14.0-dev.13
+  rive_native: ^0.1.2
+  rive: ^0.14.2
   http: ^1.1.0
   meta: ^1.16.0
 
